# Twin-2K-500-Mega-Study

./: .gitignore  Makefile  README.md  Snakefile  download_dataset.py  pyproject.toml
mega_study_evaluation/: CONVERSION_DIFF.md  README.md  REFACTORING_DOCUMENTATION.md  combine_all_meta_analyses.py  create_summary_table.py  manual_variable_extraction.json  parse_specification.py  run_all_meta_analyses.py  run_all_meta_analyses_results_20250918_203551.json  study_folder_mapping.json  test_all_evaluations.py  test_refactoring.py  update_all_analyses.py  update_notebooks_and_outputs_from_dropbox.py
mega_study_evaluation/accuracy_nudges/: Accuracy Nudges meta analysis.ipynb  mega_study_evaluation.py
mega_study_evaluation/affective_priming/: Affective Primes meta analysis.ipynb  mega_study_evaluation.py
mega_study_evaluation/common/: __init__.py  args_parser.py  data_loader.py  results_processor.py  stats_analysis.py  variable_mapper.py
mega_study_evaluation/consumer_minimalism/: Consumer Minimalism meta analysis.ipynb  mega_study_evaluation.py
mega_study_evaluation/context_effects/: context effects meta analysis.ipynb  mega_study_evaluation.py
mega_study_evaluation/default_eric/: Defaults meta analysis.ipynb  mega_study_evaluation.py
mega_study_evaluation/digital_certification/: Digital Certifications for Luxury Consumption meta analysis.ipynb  mega_study_evaluation.py
mega_study_evaluation/hiring_algorithms/: hiring algorithms meta analysis.ipynb  mega_study_evaluation.py
mega_study_evaluation/idea_evaluation/: Idea Evaluation meta analysis.ipynb  mega_study_evaluation.py
mega_study_evaluation/idea_generation/: Idea Generation meta analysis.ipynb  mega_study_evaluation.py
mega_study_evaluation/infotainment/: infotainment news meta analysis.ipynb  mega_study_evaluation.py
mega_study_evaluation/junk_fees/: Junk Fees meta analysis.ipynb  mega_study_evaluation.py
mega_study_evaluation/meta_analysis_results/: combined_all_specifications_meta_analysis.csv  correlation_by_persona_and_study.csv  last_update.json  performance_comparison_by_metric.csv  summary_by_persona_specification_avg.csv  summary_by_persona_specification_median.csv
mega_study_evaluation/obedient_twins/: Obedient Twins meta analysis.ipynb  mega_study_evaluation.py
ml_prediction/: README.md  README_all_studies.md  format_predictions.py  predict_answer_xgboost.py  prepare_xgboost_for_mad.py  run_ml_predictions_all_studies.py
post_metric_calculation/: README.md  analyze_vector_metrics.py  average_metrics_by_specification.csv  better_accuracy_metrics.py  compute_vector_metrics.py  dv_variables_summary.csv  joint_vector_metrics.csv
processing_qualtrics_csv/: __init__.py  get_responses.py
processing_qualtrics_qsf/: parse_qsf.py
scripts/: clean_ml_configs.py  run_all_studies_simulation.py  setup_study.py
(+131 files in other folders)
